...
                                  ),
                                ),
                              ),
                              Padding(
                                padding: const EdgeInsets.symmetric(horizontal: 16),
                                child: Text(
                                  'KG',
                                  style: GoogleFonts.montserrat(
                                    fontWeight: FontWeight.w500,
                                  ),
                                ),
                              ),
                            ],
...
                                  ),
                                ),
                              ),
                              Padding(
                                padding: const EdgeInsets.symmetric(horizontal: 16),
                                child: Text(
                                  'CM',
                                  style: GoogleFonts.montserrat(
                                    fontWeight: FontWeight.w500,
                                  ),
                                ),
                              ),
                            ],
...
                          if (newValue != null) {
                            viewModel.setGender(newValue);
                          }
                        },
                        items: <String>[
                          'Female',
                          'Male',
                        ].map<DropdownMenuItem<String>>((String value) {
                          IconData icon;
                          if (value == 'Female') {
                            icon = Icons.female;
                          } else {
                            icon = Icons.male;
...
